<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/txt_are_you_sure_to_quit_this_app"
            android:textColor="@color/colorBlackTitle"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@drawable/on_click_cancel"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/on_click_quit"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/quit"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
